k8s/infra/es-aiops-ingress.yaml
    
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aiops
  annotations:
    ingress.kubernetes.io/ssl-passthrough: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: kibana.***.nip.io
    http:
      paths:
      - backend:
          service:
            name: aiops-kb-http
            port:
              number: 5601
        path: /
        pathType: ImplementationSpecific
  - host: es.***.nip.io
    http:
      paths:
      - backend:
          service:
            name: aiops-es-http
            port:
              number: 9200
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - kibana.***..nip.io
    - es.***.nip.io
